--- a/.pkgmeta.yml
+++ b/.pkgmeta.yml
@@ -1,9 +1,8 @@
-package-as:
-    JustTheTip
+package-as: JustTheTip
 
 manual-changelog:
     filename: changelog
-    markup-type: creole
+    markup-type: markdown
 
 enable-nolib-creation:
     no
